<resources>
    <string name="app_name">Learn Rabbit</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THURS</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="dt">Date/Time</string>
    <string name="am8">8:00</string>
    <string name="am9">9:00</string>
    <string name="am10">10:00</string>
    <string name="am11">11:00</string>
    <string name="am12">12:00</string>
    <string name="pm13">13:00</string>
    <string name="pm14">14:00</string>
    <string name="pm15">15:00</string>
    <string name="pm16">16:00</string>
    <string name="pm17">17:00</string>
    <string name="pm18">18:00</string>
    <string name="pm19">19:00</string>
    <string name="pm20">20:00</string>
    <string name="title1">CREATE TASK</string>
    <string name="topicCreate">CREATE EVENT</string>
    <string name="task">What is the Task?</string>
    <string name="explain">If you want to explain more ...</string>
    <string name="location">Location of the task</string>
    <string name="color">Random Color</string>
    <string name="pickColor">Select a color for the event</string>
    <string name="startTime">START TIME</string>
    <string name="fifnishTime">END TIME</string>
    <string name="createbtn">CREATE</string>

    <string name="title_activity_nav_bar">navBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_slideshow">Slideshow</string>

    <string name="home">Home</string>
    <string name="title">Timetable</string>
    <string name="dic">Dictionary</string>
    <string name="calc">Kids Calculator</string>
    <string name="contact">Contact Information</string>

    <string name="titleMaths">Maths</string>
    <string name="btncount">Count</string>
    <string name="btncalc">CALCULATION</string>
    <string name="btnNums">NUMBERS</string>
    <string name="counttext1">Count Red Stawberries</string>

    <string name="img_ani">Animals</string>
    <string name="img_col">Colours</string>
    <string name="btn_ani">ANIMALS</string>
    <string name="btn_clr">COLOURS</string>
    <string name="btn_home">HOME</string>
    <string name="img_mlt" />
    <string name="img_cal" />
    <string name="btn_mlt">MULTIPLICATION MEMORIZATION</string>
    <string name="btn_cal">CALCULATOR</string>
    <string name="img_calc" />
    <string name="tv_heading2">CALCULATOR</string>
    <string name="et_num1">Enter First Value</string>
    <string name="et_num2">Enter Second Value</string>
    <string name="et_answer">Enter The Answer</string>
    <string name="btn_calculate">CALCULATE</string>
    <string name="btn_add">+</string>
    <string name="btn_substract">-</string>
    <string name="btn_multiply">*</string>
    <string name="btn_divide">/</string>
    <string name="img_mm" />
    <string name="tv_heading3">MULTIPLICATION MEMORIZATION</string>
    <string name="btn_display">TO MEMORIZE</string>
    <string name="img_mms" />
    <string name="tv_heading4">TO MEMORIZE</string>
    <string name="img_memo" />
    <string name="tv_topic">FACTORS</string>
    <string name="tv_heading5">ADD FACTORS</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_addFactor">ADD FACTOR</string>
    <string name="tv_heading6">EDIT FACTORS</string>
    <string name="img_edit" />
    <string name="tv_correct">ANSWER IS CORRECT</string>
    <string name="val_symbol">Enter Calculation Symbol</string>
    <string name="btn_view">VIEW VALUES</string>
    <string name="tv_id">Id</string>
    <string name="et_fact1">Number 1</string>
    <string name="et_fact2">Number 2</string>
    <string name="et_fact3">Answer</string>
</resources>