<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="1dp"
    app:cardCornerRadius="9dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtnum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_fact1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtnum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtnum1"
            android:text="@string/et_fact2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtnum3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtnum2"
            android:text="@string/et_fact3"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_below="@id/txtnum3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_edit" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete"
                android:layout_weight="1"/>

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>