<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#45ADA8"
    tools:context=".addFactors">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/img_memo"
            app:srcCompat="@drawable/add"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_heading6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/tv_heading5"
            android:textColor="#212121"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" />

    </LinearLayout>

    <EditText
        android:id="@+id/val_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/et_num1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#131212"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/val_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/et_num2"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#131212"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val_num1"
        tools:ignore="TextContrastCheck" />


    <EditText
        android:id="@+id/val_num3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/et_answer"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#131313"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val_num2" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_save"
        android:textSize="24sp"
        app:backgroundTint="#1B33BA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val_num3" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_view"
        android:textSize="24sp"
        app:backgroundTint="#1B33BA"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_save" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_edit"
        android:textSize="24sp"
        app:backgroundTint="#1B33BA"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_view" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="70dp"
        android:background="#4b86b4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_home"
            android:layout_width="188dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:onClick="openHome"
            android:text="@string/btn_home"
            android:textColor="#009688"
            android:textSize="34sp"
            app:backgroundTint="#FFEB3B"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>


</LinearLayout>