<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="#DCEDC2"
    tools:context=".ToMemorize">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="411dp"
        android:layout_height="106dp"
        android:background="#A8E6CE"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/img_memo"
            app:srcCompat="@drawable/memo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_heading6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/tv_heading4"
            android:textColor="#4E342E"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="70dp"
        android:layout_below="@id/recyclerView"
        android:background="#4b86b4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_home"
            android:layout_width="188dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:onClick="openHome"
            android:text="@string/btn_home"
            android:textColor="#009688"
            android:textSize="34sp"
            app:backgroundTint="#FFEB3B"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>




</RelativeLayout>